[] Lock timeout after manual lock no longer saves empty database.
[1754566] State of tree view is now persistent across minimize, lock &
save.
[1771357] Timeout timer now reset in all dialog boxes - PasswordSafe
will no longer minimize in the middle of work with an open dialog box.
[1754054, 1754611] Items are now fully sorted when "put groups first
in display tree" selected.

New Features for 3.09.01
========================
[1752896] Add ability to edit an entry's notes field using user's default 
text editor via right click on Notes field.
[1750010] Drag&Drop between databases now supported.
[1517048] PasswordSafe can now be installed as an msi package (Windows
installer). This allows site administrators to 'push' PasswordSafe to
client machines with group policy. Thanks to xenophonf.

Bugs fixed in 3.09
==================
[1748665] Number of passwords to remember (password history) can now
be set to more than 99 by typing rather than only by spinbox.
[] A note on possible problems with the autotype functionality and
some 3rd party popup-blockers. Thanks to mrttoo for the heads-up.
[] Protect user from losing entries in case of non-unique uuids in
read database. 
[] Compare fixed so that 'X' indicating differences are
in the correct columns and data copied to clipboard ends in CRLF not just LF
[1739364] Window location issue fixed
[1620423, 1754189] Focus on search text in Find Dialog - thank to zcecil for
the fix for this one. 
[1738477, 1630400] A version for Windows98 is now installed by the
installer on machines running Windows98. This version is NOT part of
the binaries in the zip file.
[] The installer will detect and notify the user if attempts to
install on an unsupported version of Windows (95 & ME).
[1735290] Configuration file works with non-ASCII user and host
names.
[1733911] File mode encryption/decryption (-d/-e) works again
[1743706] Fix random showing of user and passwords if started in
silent mode.