@@ -289,9 +289,9 @@ END
 STRINGTABLE
 BEGIN
     IDS_PICKMERGEFILE       "Please Choose a Database to Merge"
-    IDS_MERGECONFLICTS      "Conflicting entries for %s, %s, %s\nAdding new entry as %s, %s\n"
-    IDS_MERGECONFLICTS2     "Merge Conflicts"
-    IDS_MERGECOMPLETED      "Merge complete:\n%d entr%s added (%d conflict%s)"
+    IDS_MERGINGDATABASE     "Merging database: %s"
+    IDS_MERGECONFLICTS      "Conflicting entries for |%s|%s|%s|. Added merged entry as |%s|%s|%s|"
+    IDS_MERGECOMPLETED      "Merge completed: %d entr%s added (%d conflict%s)"
     IDS_MERGECOMPLETED2     "Merge Completed"
 END
 
